feat: Finalize and fix all dashboard API endpoints