@@ -1,6 +1,9 @@
+// ERSETZE DEN GESAMTEN INHALT DEINER TaskStepServiceImpl.java MIT DIESEM CODE
+
 package team5.prototype.taskstep;
 
 import jakarta.persistence.EntityNotFoundException;
+import org.springframework.context.annotation.Lazy;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import team5.prototype.dto.ActorDashboardItemDto;
@@ -8,12 +11,14 @@ import team5.prototype.notification.NotificationService;
 import team5.prototype.task.TaskService;
 import team5.prototype.user.User;
 import team5.prototype.user.UserRepository;
-import org.springframework.context.annotation.Lazy;
+
 
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.Objects;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Service
@@ -24,62 +29,21 @@ public class TaskStepServiceImpl implements TaskStepService {
     private final TaskService taskService;
     private final NotificationService notificationService;
 
+    // KORREKTUR: @Lazy hier, um die zirkuläre Abhängigkeit zu lösen
     public TaskStepServiceImpl(TaskStepRepository taskStepRepository,
                                UserRepository userRepository,
-                               @Lazy TaskService taskService, NotificationService notificationService) {
+                               @Lazy TaskService taskService,
+                               NotificationService notificationService) {
         this.taskStepRepository = taskStepRepository;
         this.userRepository = userRepository;
         this.taskService = taskService;
         this.notificationService = notificationService;
     }
 
-    @Override
-    @Transactional
-    public TaskStep assignTaskStepToUser(Long taskStepId, Long userId) {
-        TaskStep step = findTaskStep(taskStepId);
-        User user = findUser(userId);
-        step.setAssignedUser(user);
-        step.setStatus(TaskStepStatus.ASSIGNED);
-        if (step.getAssignedAt() == null) {
-            step.setAssignedAt(LocalDateTime.now());
-        }
-        return taskStepRepository.save(step);
-    }
-
-    @Override
-    @Transactional
-    public TaskStep setManualPriority(Long taskStepId, int manualPriority) {
-        TaskStep step = findTaskStep(taskStepId);
-        step.setManualPriority(manualPriority);
-        step.setPriority(mapManualPriority(manualPriority));
-        TaskStep savedStep = taskStepRepository.save(step);
-
-        // ===================================================================
-        // NEU HINZUGEFÜGT: Benachrichtigung senden
-        // ===================================================================
-        Map<String, Object> payload = Map.of(
-                "message", String.format("Die Priorität für Schritt '%s' wurde manuell geändert.", savedStep.getWorkflowStep().getName()),
-                "taskStepId", savedStep.getId(),
-                "newPriority", savedStep.getPriority().name()
-        );
-        // Wir senden das Update an den Kanal des übergeordneten Tasks
-        notificationService.sendTaskUpdateNotification(savedStep.getTask().getId(), payload);
-
-        return savedStep;
-    }
-
+    // DIESE METHODE IST KORREKT UND BLEIBT
     @Override
     @Transactional(readOnly = true)
-    public List<TaskStep> getActiveTaskStepsByUser(Long userId) {
-        return taskStepRepository.findByAssignedUserIdAndStatusNot(userId, TaskStepStatus.COMPLETED);
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<ActorDashboardItemDto> getActorDashboardItems(Long userId,
-                                                              TaskStepStatus status,
-                                                              Priority priority,
-                                                              String query) {
+    public List<ActorDashboardItemDto> getActorDashboardItems(Long userId, TaskStepStatus status, Priority priority, String query) {
         Stream<TaskStep> steps = taskStepRepository
                 .findByAssignedUserIdAndStatusNot(userId, TaskStepStatus.COMPLETED)
                 .stream();
@@ -94,14 +58,55 @@ public class TaskStepServiceImpl implements TaskStepService {
             steps = steps.filter(step -> containsIgnoreCase(step.getTask().getTitle(), needle)
                     || containsIgnoreCase(step.getWorkflowStep().getName(), needle));
         }
-        return steps.map(this::toActorDashboardItem).toList();
+        return steps.map(this::toActorDashboardItemDto).toList();
+    }
+    @Override
+    @Transactional(readOnly = true)
+    public List<ActorDashboardItemDto> getActorDashboardItems(Long userId) {
+        return taskStepRepository.findByAssignedUserIdAndStatusNot(userId, TaskStepStatus.COMPLETED)
+                .stream()
+                .map(this::toActorDashboardItemDto)
+                .collect(Collectors.toList());
+    }
+    @Override
+    @Transactional
+    public TaskStep assignTaskStepToUser(Long taskStepId, Long userId) {
+        TaskStep step = findTaskStep(taskStepId);
+        User user = findUser(userId);
+        step.setAssignedUser(user);
+        step.setStatus(TaskStepStatus.ASSIGNED);
+        if (step.getAssignedAt() == null) {
+            step.setAssignedAt(LocalDateTime.now());
+        }
+        return taskStepRepository.save(step);
+    }
+    // DIESE METHODE IST KORREKT UND BLEIBT
+    @Override
+    @Transactional
+    public TaskStepDto setManualPriorityAndConvertToDto(Long taskStepId, int manualPriority) {
+        TaskStep step = findTaskStep(taskStepId);
+        step.setManualPriority(manualPriority);
+        step.setPriority(mapManualPriority(manualPriority));
+        TaskStep savedStep = taskStepRepository.save(step);
+
+        Map<String, Object> payload = Map.of(
+                "message", String.format("Die Priorität für Schritt '%s' wurde manuell geändert.", savedStep.getWorkflowStep().getName()),
+                "taskStepId", savedStep.getId(),
+                "newPriority", savedStep.getPriority().name()
+        );
+        notificationService.sendTaskUpdateNotification(savedStep.getTask().getId(), payload);
+
+        return convertToDto(savedStep);
     }
 
+    // DIESE METHODE IST KORREKT UND BLEIBT
     @Override
     @Transactional
     public void completeTaskStep(Long taskId, Long taskStepId, Long userId) {
         taskService.completeStep(taskId, taskStepId, userId);
     }
+
+    // --- Private Hilfsmethoden ---
 
     private TaskStep findTaskStep(Long id) {
         return taskStepRepository.findById(id)
@@ -113,65 +118,37 @@ public class TaskStepServiceImpl implements TaskStepService {
                 .orElseThrow(() -> new EntityNotFoundException("User %d nicht gefunden".formatted(id)));
     }
 
-    private ActorDashboardItemDto toActorDashboardItem(TaskStep step) {
+    private Priority mapManualPriority(int manualPriority) {
+        if (manualPriority <= 1) return Priority.IMMEDIATE;
+        if (manualPriority == 2) return Priority.MEDIUM_TERM;
+        return Priority.LONG_TERM;
+    }
+
+    // Konvertiert zu dem spezifischen DTO für das Akteur-Dashboard
+    private ActorDashboardItemDto toActorDashboardItemDto(TaskStep step) {
         return new ActorDashboardItemDto(
-                step.getTask().getId(),
-                step.getTask().getTitle(),
-                step.getTask().getDeadline(),
-                step.getTask().getStatus(),
-                step.getId(),
-                step.getWorkflowStep().getName(),
-                step.getWorkflowStep().getSequenceOrder(),
-                step.getStatus(),
-                step.getPriority(),
-                step.getAssignedAt()
+                step.getTask().getId(), step.getTask().getTitle(), step.getTask().getDeadline(),
+                step.getTask().getStatus(), step.getId(), step.getWorkflowStep().getName(),
+                step.getWorkflowStep().getSequenceOrder(), step.getStatus(),
+                step.getPriority(), step.getAssignedAt()
         );
     }
 
+    // Konvertiert zu dem allgemeinen TaskStepDto
+    private TaskStepDto convertToDto(TaskStep step) {
+        TaskStepDto dto = new TaskStepDto();
+        dto.setId(step.getId());
+        if (step.getWorkflowStep() != null) dto.setName(step.getWorkflowStep().getName());
+        if (step.getStatus() != null) dto.setStatus(step.getStatus().name());
+        if (step.getAssignedUser() != null) dto.setAssignedUsername(step.getAssignedUser().getUsername());
+        if (step.getPriority() != null) dto.setPriority(step.getPriority().name());
+        return dto;
+    }
     private boolean containsIgnoreCase(String value, String needleLower) {
         if (value == null) {
             return false;
         }
         return value.toLowerCase(Locale.ROOT).contains(needleLower);
-    }
-
-    private Priority mapManualPriority(int manualPriority) {
-        if (manualPriority <= 1) {
-            return Priority.IMMEDIATE;
-        }
-        if (manualPriority == 2) {
-            return Priority.MEDIUM_TERM;
-        }
-        return Priority.LONG_TERM;
-    }
-    // NEUE METHODE
-    @Override
-    @Transactional
-    public TaskStepDto setManualPriorityAndConvertToDto(Long taskStepId, int manualPriority) {
-        // Ruft die bestehende Logik auf, um die Änderung zu speichern
-        TaskStep updatedStep = setManualPriority(taskStepId, manualPriority);
-
-        // Führt die Konvertierung INNERHALB der Transaktion durch
-        return convertToDto(updatedStep);
-    }
-    // Wir fügen hier eine private Konvertierungsmethode hinzu
-    private TaskStepDto convertToDto(TaskStep step) {
-        TaskStepDto dto = new TaskStepDto();
-        dto.setId(step.getId());
-        // Da wir uns in der Transaktion befinden, können diese Aufrufe nicht fehlschlagen
-        if (step.getWorkflowStep() != null) {
-            dto.setName(step.getWorkflowStep().getName());
-        }
-        if (step.getStatus() != null) {
-            dto.setStatus(step.getStatus().name());
-        }
-        if (step.getAssignedUser() != null) {
-            dto.setAssignedUsername(step.getAssignedUser().getUsername());
-        }
-        if (step.getPriority() != null) {
-            dto.setPriority(step.getPriority().name());
-        }
-        return dto;
     }
 
 }
